syntax = "proto3";

package api.ticker.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/hmcalister/genron/gen/api/ticker/v1;tickerv1";

message GetAllTickerNamesRequest {}

message GetAllTickerNamesResponse {
    repeated string ticker_name = 1;
}

message GetTickerValueRequest {
  string ticker_name = 1;
}

message GetTickerValueResponse {
    string ticker_name = 1;
    double ticker_value = 2;
    int64 last_updated_timestamp = 3;
}

service TickerInfoService {
  rpc GetAllTickerNames(google.protobuf.Empty) returns (GetAllTickerNamesResponse) {}
  rpc GetTickerValue(GetTickerValueRequest) returns (GetTickerValueResponse) {}
}